<resources>
    <string name="app_name">ColourMyView</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>


    <string name="red_button">Red</string>
    <string name="yellow_button">Yellow</string>
    <string name="green_button">Green</string>
    <string name="how_to_play">How To Play</string>
    <string name="click_on_the_screen_and_button_to_play">click on the screen and button</string>

</resources>